# SubCellPortable

./: .gitignore  CLAUDE.md  README.md  cli.py  config.py  config.yaml  dataset.py  ensure_model.py  example.py  flake.nix  image_utils.py  inference.py  model_loader.py  output_handlers.py  process.py  pyproject.toml  requirements.txt  server.py  utils.py  vit_model.py
nix/: default.nix  subcell.nix
