[project]			# 
name = "subcellportable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # "boto3>=1.42.9",
    "numpy>=2",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

# Needed since it is a flat directory
[tool.setuptools]
py-modules = []
