[project]			# 
name = "subcellportable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
    "numpy>=1",
    "requests>=2.32",
    "torch>=2.4.1",
    "torchvision",
    "transformers>=4.45.1",
]

# Needed since it is a flat directory
[tool.setuptools]
py-modules = []
